# edsm

./: .gitignore  CMakeLists.txt  Makefile  README.md  client.c
edsm/: CMakeLists.txt  debug.c  edsm.h  edsmd.c  message.c  message.h  protocol.c  protocol.h  sockets.c  sockets.h  task.c  task.h  timing.h
edsm/test/: CMakeLists.txt  test  test.c
src/: CMakeLists.txt  debug.c  debug.h  dobj.c  dobj.h  edsm.h  edsmd.c  message.c  message.h  protocol.c  protocol.h  protocol_handshake.c  protocol_util.c  socket.c  socket.h  sockets.c  sockets.h  task.c  task.h  timing.c
src/dobj/: barrier.c  barrier.h  dobj.c  dobj.h  mutex.c  mutex.h  reply_waiter.c  reply_waiter.h
src/memory/: memory.c  memory.h  memory_dobj.c
test/: .gitignore  CMakeLists.txt  memory_task.c  nbody.c  nbody.py  test.c  test_message.c  test_task.c  test_task_com.c
zmq/: CMakeLists.txt  dealer_client.c  server.c
